LookDev HDRI changes are applied only to one quad in 3D Viewport Quad view #59046

Closed
opened 2018-12-08 22:45:24 +01:00 by Reinis Adovics · 11 comments

System Information
Operating system: macOS 10.13.6 (17G65)

Blender Version
Broken: 2.80, blender-2.80.0-git20181204.1b6a394d862-x86_64, blender2.8, 2018-12-04

Short description of error
When using 3D Viewport in LookDev mode any changes in Shading HDRI map (map itself or its rotation) is only applied to one quad when using Quad view.

Expected that when 3D Viewport is in quad view all 4 quads receive shading update as it should be considered as "one configuration" (which differs from obtaining different 3D views by manually splitting view and having different whatever 3D viewports with different mode and shading).

Exact steps for others to reproduce the error

Launch Blender.
Delete default stuff (light, camera, cube).
Add sphere.
Enter Quad view (Ctrl+Alt+q)
Change shading to LookDev.
Enter Shading dropdown and change HDRI to something else.
Observe that Front Orthographic quad (bottom left of the quad view) is only one that received change in lighting.

**System Information** Operating system: macOS 10.13.6 (17G65) **Blender Version** Broken: 2.80, blender-2.80.0-git20181204.1b6a394d862-x86_64, blender2.8, 2018-12-04 **Short description of error** When using *3D Viewport* in *LookDev* mode any changes in *Shading* HDRI map (map itself or its rotation) is only applied to one quad when using *Quad view*. Expected that when *3D Viewport* is in quad view all 4 quads receive shading update as it should be considered as "one configuration" (which differs from obtaining different 3D views by manually splitting view and having different whatever 3D viewports with different mode and shading). **Exact steps for others to reproduce the error** Launch Blender. Delete default stuff (light, camera, cube). Add sphere. Enter Quad view (Ctrl+Alt+q) Change shading to LookDev. Enter Shading dropdown and change HDRI to something else. Observe that Front Orthographic quad (bottom left of the quad view) is only one that received change in lighting.
Author

Added subscriber: @kroko-1

Added subscriber: @kroko-1

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Cannot reproduce. Works here.

Cannot reproduce. Works here.
Author

What does "here" means?
Just reproduced it also under Windows 10 1803 17134.407 and e79bb957fc

What does "here" means? Just reproduced it also under Windows 10 1803 17134.407 and e79bb957fc3
Author

Opened quad view and LookDev shading.

Screen Shot 2018-12-09 at 22.55.20.png

Changed Shading HDRI, it was applied only to front ortho.

Screen Shot 2018-12-09 at 22.55.35.png

Opened quad view and LookDev shading. ![Screen Shot 2018-12-09 at 22.55.20.png](https://archive.blender.org/developer/F5903088/Screen_Shot_2018-12-09_at_22.55.20.png) Changed Shading HDRI, it was applied only to front ortho. ![Screen Shot 2018-12-09 at 22.55.35.png](https://archive.blender.org/developer/F5903087/Screen_Shot_2018-12-09_at_22.55.35.png)
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I'm also able to reproduce it here.
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS Windows 10 Home 64bit
Blender 2.8 Beta e79bb957fc

I'm also able to reproduce it here. CPU: Ryzen 5 2600 GPU: RX 570 4GB OS Windows 10 Home 64bit Blender 2.8 Beta e79bb957fc3

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

Ok I can reproduce this now.

Something for @fclem or @Jeroen-Bakker ?

Ok I can reproduce this now. Something for @fclem or @Jeroen-Bakker ?
Clément Foucault self-assigned this 2018-12-09 22:26:24 +01:00
Clément Foucault removed their assignment 2019-03-16 03:59:54 +01:00
Jeroen Bakker was assigned by Clément Foucault 2019-03-16 03:59:54 +01:00

This issue was referenced by 0aca8b0174

This issue was referenced by 0aca8b017436395fc3af62d6265d16fd6d531f1a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59046
No description provided.