source/blender/draw/engines/eevee/eevee_lookdev.c
@@ -41,6 +41,7 @@
 static void eevee_lookdev_lightcache_delete(EEVEE_Data *vedata)
 {
 	EEVEE_StorageList *stl = vedata->stl;
+	EEVEE_PrivateData *g_data = stl->g_data;
 	EEVEE_TextureList *txl = vedata->txl;
 
 	MEM_SAFE_FREE(stl->lookdev_lightcache);
@@ -48,6 +49,8 @@ static void eevee_lookdev_lightcache_delete(EEVEE_Data *vedata)
 	MEM_SAFE_FREE(stl->lookdev_cube_data);
 	DRW_TEXTURE_FREE_SAFE(txl->lookdev_grid_tx);
 	DRW_TEXTURE_FREE_SAFE(txl->lookdev_cube_tx);
+	g_data->studiolight_index = -1;
+	g_data->studiolight_rot_z = 0.0f;
 }
 
 void EEVEE_lookdev_cache_init(
@@ -57,6 +60,7 @@ void EEVEE_lookdev_cache_init(
 {
 	EEVEE_StorageList *stl = vedata->stl;
 	EEVEE_TextureList *txl = vedata->txl;
+	EEVEE_PrivateData *g_data = stl->g_data;
 	const DRWContextState *draw_ctx = DRW_context_state_get();
 	View3D *v3d = draw_ctx->v3d;
 	if (LOOK_DEV_STUDIO_LIGHT_ENABLED(v3d)) {
@@ -132,13 +136,12 @@ void EEVEE_lookdev_cache_init(
 			DRW_shgroup_uniform_texture(*grp, "image", tex);
 
 			/* Do we need to recalc the lightprobes? */
-			if (pinfo &&
-			    ((pinfo->studiolight_index != sl->index) ||
-			     (pinfo->studiolight_rot_z != v3d->shading.studiolight_rot_z)))
+			if (g_data->studiolight_index != sl->index ||
+			    g_data->studiolight_rot_z != v3d->shading.studiolight_rot_z)
 			{
 				stl->lookdev_lightcache->flag |= LIGHTCACHE_UPDATE_WORLD;
-				pinfo->studiolight_index = sl->index;
-				pinfo->studiolight_rot_z = v3d->shading.studiolight_rot_z;
+				g_data->studiolight_index = sl->index;
+				g_data->studiolight_rot_z = v3d->shading.studiolight_rot_z;
 			}
 		}
 	}
